--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,18 +2,14 @@ default_stages: [commit]
 default_language_version:
   python: python3.9
 repos:
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
+  - repo: https://github.com/psf/black
+    rev: 23.1.0
     hooks:
-    - id: flake8
-      additional_dependencies: [flake8-docstrings]
+    - id: black
       args: [
-        --max-line-length=100,
-        --docstring-convention=google,
-        --ignore=E203
+        --line-length=100, 
       ]
-      exclude: ^(venv/|docs/|.*__init__.py)
+      exclude: ^(venv/|docs/)
       types: ['python']
 
   - repo: https://github.com/pycqa/isort
