--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,8 @@
                 "2",
                 "--val_batch_size",
                 "2",
+                "--max_per_dataset",
+                "4",
                 "--debug",
                 "--wandb"
             ]
