fixed wandb logging issue, added --no_pretrain flag

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
                 "16",
                 "--datasets",
                 "hofmann",
+                "--no_pretrain",
                 "--debug",
                 "--wandb"
             ]
