migrated to imageio, added --no_aug flag

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,8 @@
                 "5",
                 "--no_pretrain",
                 "--debug",
-                "--make_submission"
+                "--make_submission",
+                "--no_aug"
             ]
         }
     ]
