--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,10 +18,11 @@
                 "--datasets",
                 "maptiler",
                 "--n_finetuning_folds",
-                "5",
+                "2",
                 "--make_submission",
                 "--num_workers",
-                "1"
+                "1",
+                "--debug"
             ]
         }
     ]
