--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
                 "--initial_model",
                 "/Users/onat/School/RoadSeg/temp_folder/chk.bin",
                 "--model_download_drive_id",
-                "https://drive.google.com/file/d/1HvnM02Zimq_DspftGFz5ziPD-HWWhERL/"
+                "1HvnM02Zimq_DspftGFz5ziPD-HWWhERL"
                 // https://drive.google.com/file/d/1HvnM02Zimq_DspftGFz5ziPD-HWWhERL/view?usp=drive_link
                 
             ]
