added loss masking (curr. only ESRI) and debugged bing-clean

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,15 +13,15 @@
                 "cpu",
                 "--smp_backbone",
                 "dummy-unet",
+                
                 "--train_batch_size",
                 "1",
                 "--val_batch_size",
                 "1",
                 "--datasets",
-                "maptiler",
-                "--n_finetuning_folds",
-                "1",
-                "--no_pretrain",
+                "esri",
+                "--max_per_dataset",
+                "32",
                 "--make_submission",
                 "--num_workers",
                 "2",
@@ -31,6 +31,8 @@
                 "2",
                 "--finetuning_epochs",
                 "1",
+                "--pretraining_epochs",
+                "2",
                 "--scheduler",
                 "cosine_warm_restarts",
                 // "--initial_model",
