--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,13 +13,13 @@
                 "cpu",
                 "--smp_backbone",
                 "dummy-unet",
-                
+
                 "--train_batch_size",
                 "1",
                 "--val_batch_size",
                 "1",
                 "--datasets",
-                "esri",
+                "roadtracing",
                 "--max_per_dataset",
                 "32",
                 "--make_submission",
