dice as default

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
                 "--device",
                 "cpu",
                 "--smp_backbone",
-                "dummy-unet",
-
+                "efficientnet-b5",
+                
                 "--train_batch_size",
                 "1",
                 "--val_batch_size",
@@ -25,12 +25,13 @@
                 "--make_submission",
                 "--num_workers",
                 "2",
+                "--no_pretrain",
                 "--img_size",
                 "64",
                 "--n_finetuning_folds",
                 "2",
                 "--finetuning_epochs",
-                "1",
+                "10",
                 "--pretraining_epochs",
                 "2",
                 "--scheduler",
