added support for epfl dataset

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,20 +12,19 @@
                 "--device",
                 "cpu",
                 "--smp_backbone",
-                "efficientnet-b5",
+                "dummy-unet",
                 
                 "--train_batch_size",
                 "1",
                 "--val_batch_size",
                 "1",
                 "--datasets",
-                "roadtracing",
+                "epfl",
                 "--max_per_dataset",
                 "32",
                 "--make_submission",
                 "--num_workers",
                 "2",
-                "--no_pretrain",
                 "--img_size",
                 "64",
                 "--n_finetuning_folds",
