--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,16 +12,15 @@
                 "--device",
                 "cpu",
                 "--smp_backbone",
-                "dummy-unet",
-
+                "efficientnet-b5",
                 "--train_batch_size",
                 "1",
                 "--val_batch_size",
-                "1",
+                "2",
                 "--datasets",
                 "roadtracing",
                 "--max_per_dataset",
-                "32",
+                "16",
                 "--make_submission",
                 "--num_workers",
                 "2",
@@ -32,9 +31,18 @@
                 "--finetuning_epochs",
                 "1",
                 "--pretraining_epochs",
-                "2",
+                "1",
                 "--scheduler",
                 "cosine_warm_restarts",
+                "--decoder_depth",
+                "5",
+                "--pretraining_loss",
+                "bce",
+                "--metrics_to_watch",
+                "f1",
+                "precision",
+                "recall",
+                "iou"
                 // "--initial_model",
                 // "/Users/onat/School/RoadSeg/temp_folder/chk.bin",
                 // "--model_download_drive_id",
