added support for google

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
                 "--device",
                 "cpu",
                 "--smp_backbone",
-                "efficientnet-b5",
+                "timm-regnety-080",
                 "--smp_model",
                 "Unet",
                 "--train_batch_size",
@@ -20,14 +20,14 @@
                 "--val_batch_size",
                 "2",
                 "--datasets",
-                "hofmann",
+                "google",
                 "--max_per_dataset",
                 "16",
                 "--make_submission",
                 "--num_workers",
                 "2",
                 "--img_size",
-                "128",
+                "400",
                 "--n_finetuning_folds",
                 "2",
                 "--finetuning_epochs",
