added slim option for less decoder channels

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,13 @@
                 "--device",
                 "cpu",
                 "--smp_backbone",
-                "timm-regnety-080",
+                "efficientnet-b7",
+                "--slim",
                 "--smp_model",
-                "Unet",
+                "UnetPlusPlus",
+                "--decoder_depth",
+                "5",
+                "--debug",
                 "--train_batch_size",
                 "1",
                 "--val_batch_size",
@@ -27,7 +31,7 @@
                 "--num_workers",
                 "2",
                 "--img_size",
-                "400",
+                "416",
                 "--n_finetuning_folds",
                 "2",
                 "--finetuning_epochs",
