--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,7 +44,8 @@
                 "--pretraining_loss",
                 "bce",
                 "--finetuning_loss",
-                "smp_dice",
+                "patch_f1",
+                "--no_pretrain",
                 "--metrics_to_watch",
                 "f1",
                 "compf1",
