--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
                 "--val_batch_size",
                 "2",
                 "--datasets",
-                "google",
+                "onepiece-cil",
                 "--max_per_dataset",
                 "16",
                 "--make_submission",
@@ -45,7 +45,7 @@
                 "bce",
                 "--finetuning_loss",
                 "patch_f1",
-                "--no_pretrain",
+                // "--no_pretrain",
                 "--metrics_to_watch",
                 "f1",
                 "compf1",
