--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "program": "${workspaceFolder}/main.py",
             "justMyCode": false,
             "args": [
-                "--log_to_file",
+                // "--log_to_file",
                 "--experiment_tag",
                 "local_debug",
                 "--device",
@@ -30,7 +30,7 @@
                 "--num_workers",
                 "2",
                 "--img_size",
-                "32",
+                "64",
                 "--n_finetuning_folds",
                 "2",
                 "--finetuning_epochs",
@@ -45,7 +45,8 @@
                 "bce",
                 "--finetuning_loss",
                 "patch_f1",
-                // "--no_pretrain",
+                "--no_pretrain",
+                "--onepiece",
                 "--metrics_to_watch",
                 "f1",
                 "compf1",
