migrated to sgmoid + bce + thesh (breaks!)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
                 "--n_finetuning_folds",
                 "2",
                 "--finetuning_epochs",
-                "10",
+                "2",
                 "--pretraining_epochs",
                 "1",
                 "--scheduler",
@@ -44,7 +44,7 @@
                 "--pretraining_loss",
                 "bce",
                 "--finetuning_loss",
-                "patch_f1",
+                "bce",
                 "--no_pretrain",
                 "--onepiece",
                 "--metrics_to_watch",
