scheduler_warmup_iters argument added

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,25 +7,24 @@
             "program": "${workspaceFolder}/main.py",
             "justMyCode": false,
             "args": [
-                "--log_to_file",
                 "--experiment_tag",
                 "local_debug",
                 "--device",
                 "cpu",
                 "--smp_backbone",
-                "efficientnet-b7",
+                "efficientnet-b5",
                 "--smp_model",
-                "UnetPlusPlus",
+                "Unet",
                 "--decoder_depth",
-                "5",
+                "4",
                 "--train_batch_size",
-                "1",
+                "2",
                 "--val_batch_size",
                 "2",
                 "--datasets",
-                "maptiler",
+                "hofmann",
                 "--max_per_dataset",
-                "8",
+                "10",
                 "--make_submission",
                 "--num_workers",
                 "2",
@@ -38,9 +37,9 @@
                 "--pretraining_epochs",
                 "1",
                 "--scheduler",
-                "plateau",
-                "--decoder_depth",
-                "5",
+                "exponential",
+                "--scheduler_warmup_iters",
+                "10",
                 "--pretraining_loss",
                 "bce",
                 "--finetuning_loss",
