added basic diffusion support

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
                 "--smp_backbone",
                 "efficientnet-b7",
                 "--smp_model",
-                "UnetPlusPlus",
+                "medsegdiff",
                 "--decoder_depth",
                 "5",
                 "--train_batch_size",
@@ -30,15 +30,15 @@
                 "--num_workers",
                 "2",
                 "--img_size",
-                "64",
+                "16",
                 "--n_finetuning_folds",
                 "2",
                 "--finetuning_epochs",
-                "2",
+                "1",
                 "--pretraining_epochs",
                 "1",
                 "--scheduler",
-                "plateau",
+                "cosine_warm_restarts",
                 "--decoder_depth",
                 "5",
                 "--pretraining_loss",
