--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "justMyCode": false,
             "args": [
                 // "--log_to_file",
+                "--use_wandb",
                 "--experiment_tag",
                 "local_debug",
                 "--device",
