added padding & rotation for bing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,14 +22,14 @@
                 "--val_batch_size",
                 "2",
                 "--datasets",
-                "hofmann",
+                "bing-clean",
                 "--max_per_dataset",
                 "10",
                 "--make_submission",
                 "--num_workers",
                 "2",
                 "--img_size",
-                "32",
+                "400",
                 "--n_finetuning_folds",
                 "2",
                 "--finetuning_epochs",
@@ -44,7 +44,6 @@
                 "bce",
                 "--finetuning_loss",
                 "patch_f1",
-                "--no_pretrain",
                 "--metrics_to_watch",
                 "f1",
                 "compf1",
