added Onat's MedSegDiff adaptation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,19 +8,22 @@
             "justMyCode": false,
             "args": [
                 // "--log_to_file",
-                "--wandb",
                 "--experiment_tag",
                 "local_debug",
                 "--device",
                 "cpu",
                 "--smp_backbone",
-                "efficientnet-b7",
+                "efficientnet-b1",
+                "--smp_encoder_init_weights",
+                "imagenet",
                 "--smp_model",
-                "medsegdiff",
+                "DeepLabV3",
+                "--use_diffusion",
+                "--slim",
                 "--decoder_depth",
                 "5",
                 "--train_batch_size",
-                "1",
+                "2",
                 "--val_batch_size",
                 "2",
                 "--datasets",
@@ -31,13 +34,13 @@
                 "--num_workers",
                 "2",
                 "--img_size",
-                "16",
+                "32",
                 "--n_finetuning_folds",
                 "2",
                 "--finetuning_epochs",
-                "1",
+                "20",
                 "--pretraining_epochs",
-                "1",
+                "20",
                 "--scheduler",
                 "cosine_warm_restarts",
                 "--decoder_depth",
