Added PatchGAN loss

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -56,6 +56,74 @@
                 // "1HvnM02Zimq_DspftGFz5ziPD-HWWhERL"
                 // https://drive.google.com/file/d/1HvnM02Zimq_DspftGFz5ziPD-HWWhERL/view?usp=drive_link
             ]
+        },
+        {
+            "name": "Onat Local Debug",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/main.py",
+            "justMyCode": false,
+            "args": [
+                "--experiment_tag",
+                "local_debug",
+                "--device",
+                "cpu",
+                "--smp_backbone",
+                "efficientnet-b5",
+                "--smp_model",
+                "Unet",
+                "--decoder_depth",
+                "4",
+                "--train_batch_size",
+                "2",
+                "--val_batch_size",
+                "2",
+                "--datasets",
+                "hofmann",
+                "--max_per_dataset",
+                "10",
+                "--make_submission",
+                "--num_workers",
+                "2",
+                "--img_size",
+                "32",
+                "--n_finetuning_folds",
+                "2",
+                "--finetuning_epochs",
+                "1",
+                "--pretraining_epochs",
+                "5",
+                "--scheduler",
+                "exponential",
+                "--scheduler_warmup_iters",
+                "10",
+                "--pretraining_lr",
+                "0.0000",
+                "--finetuning_lr",
+                "0.0000",
+                "--pretraining_loss",
+                "patchgan_disc",
+                "--finetuning_loss",
+                "smp_dice",
+                "--metrics_to_watch",
+                "iou",
+                "compf1",
+                "precision",
+                "recall",
+                "f1"
+                // "--initial_model",
+                // "/Users/onat/School/RoadSeg/temp_folder/chk.bin",
+                // "--model_download_drive_id",
+                // "1HvnM02Zimq_DspftGFz5ziPD-HWWhERL"
+                // https://drive.google.com/file/d/1HvnM02Zimq_DspftGFz5ziPD-HWWhERL/view?usp=drive_link
+            ]
+        },
+        {
+            "name": "Python: Debug Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "justMyCode": true,
         }
     ]
 }
