modified self.smp_encoder to allow for weight loading

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,15 +13,14 @@
                 "--device",
                 "cpu",
                 "--smp_backbone",
-                "efficientnet-b1",
+                "efficientnet-b5",
                 "--smp_encoder_init_weights",
                 "imagenet",
                 "--smp_model",
-                "DeepLabV3",
+                "Unet",
                 "--initial_model",
                 "logs/onat-last_epoch-pretrain.bin",
                 "--use_diffusion",
-                "--slim",
                 "--decoder_depth",
                 "5",
                 "--train_batch_size",
@@ -29,14 +28,14 @@
                 "--val_batch_size",
                 "2",
                 "--datasets",
-                "onepiece-cil",
+                "hofmann",
                 "--max_per_dataset",
                 "8",
                 "--make_submission",
                 "--num_workers",
                 "2",
                 "--img_size",
-                "32",
+                "416",
                 "--n_finetuning_folds",
                 "2",
                 "--finetuning_epochs",
