--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,7 @@
                 "--val_batch_size",
                 "2",
                 "--datasets",
-                "hofmann",
+                "google",
                 "--max_per_dataset",
                 "8",
                 "--make_submission",
@@ -50,8 +50,9 @@
                 "bce",
                 "--finetuning_loss",
                 "bce",
-                "--no_pretrain",
+                // "--no_pretrain",
                 "--onepiece",
+                "--partial_diffusion",
                 "--metrics_to_watch",
                 "f1",
                 "compf1",
