un-froze decoder

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -50,8 +50,7 @@
                 "bce",
                 "--finetuning_loss",
                 "bce",
-                "--onepiece",
-                "--partial_diffusion",
+                "--no_pretrain",
                 "--metrics_to_watch",
                 "f1",
                 "compf1",
