added clipping + offset for sampling, removed zero-diffusion features

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,8 @@
                 "imagenet",
                 "--smp_model",
                 "Unet",
-                "--initial_model",
-                "logs/onat-last_epoch-pretrain.bin",
+                //"--initial_model",
+                //"logs/onat-last_epoch-pretrain.bin",
                 "--use_diffusion",
                 "--decoder_depth",
                 "5",
