--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -50,7 +50,7 @@
                 "--pretraining_loss",
                 "bce",
                 "--finetuning_loss",
-                "bce",
+                "smp_soft_ce",
                 "--no_pretrain",
                 "--metrics_to_watch",
                 "f1",
