--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -68,55 +68,28 @@
                 "local_debug",
                 "--device",
                 "cpu",
-                "--smp_backbone",
-                "efficientnet-b5",
-                "--smp_model",
-                "Unet",
-                "--decoder_depth",
-                "4",
-                "--train_batch_size",
-                "2",
-                "--val_batch_size",
-                "2",
                 "--datasets",
-                "hofmann",
-                "--max_per_dataset",
-                "10",
-                "--make_submission",
-                "--num_workers",
-                "2",
-                "--img_size",
-                "32",
-                "--n_finetuning_folds",
-                "2",
-                "--finetuning_epochs",
-                "1",
-                "--pretraining_epochs",
-                "5",
-                "--scheduler",
-                "exponential",
-                "--scheduler_warmup_iters",
-                "10",
-                "--pretraining_lr",
-                "0.0001",
-                "--finetuning_lr",
-                "0.0001",
-                "--pretraining_loss",
-                "patchgan_dice",
-                "--finetuning_loss",
-                "patchgan_dice",
-                "--metrics_to_watch",
-                "iou",
-                "compf1",
-                "precision",
-                "recall",
-                "f1",
-                // "--initial_model",
-                // "temp_folder/chk.bin",
-                // "--model_download_drive_id",
-                // "1uPULdquvoGghCqRYL3bgqjCKBTkLkc2F",
-                "--discriminator_download_drive_id",
-                "1c6RhbklRIUpOEI8DrxUoTXwTa4rgo9VK"
+                "google" ,
+                "--smp_model","DeepLabV3+",
+                "--smp_backbone","timm-regnety_320",
+                // "--smp_encoder_init_weights","imagenet",
+                "--decoder_depth","4" ,
+                "--img_size","40" ,
+                "--pretraining_epochs","40" ,
+                "--finetuning_epochs", "60",
+                "--pretraining_lr", "0.0005",
+                "--finetuning_lr","0.00007",
+                "--min_lr","0.0000005",
+                "--metrics_to_watch", "iou", "f1" ,"precision" ,"recall" ,"compf1",
+                "--pretraining_loss","patchgan_dice",
+                "--finetuning_loss","patchgan_dice",
+                "--scheduler","cosine",
+                "--scheduler_warmup_iters","200",
+                "--train_batch_size","2",
+                "--val_batch_size", "2",
+                "--initial_model","temp_folder/chk.bin",
+                // "--model_download_drive_id","1kxvCoPrOKSZG4ARrDGRP7c14-5oL9yow",
+                // "--discriminator_download_drive_id","1c6RhbklRIUpOEI8DrxUoTXwTa4rgo9VK",
             ]
         },
         {
