--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,16 +13,14 @@
                 "--device",
                 "cpu",
                 "--smp_backbone",
-                "efficientnet-b5",
+                "efficientnet-b7",
                 "--smp_encoder_init_weights",
                 "imagenet",
                 "--smp_model",
-                "Unet",
+                "UnetPlusPlus",
                 //"--initial_model",
                 //"logs/onat-last_epoch-pretrain.bin",
-                //"--use_diffusion",
-                "--onepiece",
-                "--partial_diffusion",
+                "--use_diffusion",
                 "--decoder_depth",
                 "4",
                 "--train_batch_size",
@@ -38,9 +36,9 @@
                 "--img_size",
                 "416",
                 "--n_finetuning_folds",
-                "2",
+                "5",
                 "--finetuning_epochs",
-                "20",
+                "0",
                 "--pretraining_epochs",
                 "20",
                 "--scheduler",
